--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
     ]
   },
   "overrides": {
-    "ajv": "6.12.6",
-    "ajv-keywords": "3.5.2"
+  "ajv": "6.12.6",
+  "ajv-keywords": "3.5.2",
+  "schema-utils": "2.7.1"
   },
   "engines": {
     "node": "18.x"
