--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "swiper": "^11.2.10"
   },
   "devDependencies": {
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "patch-package": "^6.4.7"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "patch-package"
   },
   "eslintConfig": {
     "extends": ["react-app", "react-app/jest"]
